--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -11,7 +11,7 @@
     flex-grow: 1;
   }
   
-  .Dashboard__aside--aside {
+  .Dashboard__aside {
     width: 20vw;
     height: 100vh;
     background-color: lightgray;
