Added: fixed calendar schedule and added pair details and button

--- a/src/CalendarSchedule/CalendarSchedule.css
+++ b/src/CalendarSchedule/CalendarSchedule.css
@@ -24,100 +24,109 @@
   background: white;
   /* border: 1px solid lightgray; */
   margin: 0 auto;
-  height: 35vh;
   /* Remove below for real cal */
   /* background-color: lightgray; */
-  }
-  .CalendarSchedule .header {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 115%;
-  padding: 1.5em 0;
-  border-bottom: 1px solid lightgray;
-  }
-  .CalendarSchedule .header .icon {
-  cursor: pointer;
-  transition: .15s ease-out;
-  }
-  .CalendarSchedule .header .icon:hover {
-  transform: scale(1.75);
-  transition: .25s ease-out;
-  color: dodgerblue;
-  }
-  .CalendarSchedule .header .icon:first-of-type {
-  margin-left: 1em;
-  }
-  .CalendarSchedule .header .icon:last-of-type {
-  margin-right: 1em;
-  }
-  .CalendarSchedule .days {
-  text-transform: uppercase;
-  font-weight: 400;
-  color: gray;
-  font-size: 70%;
-  padding: .75em 0;
-  border-bottom: 1px solid lightgray;
-  }
-  .CalendarSchedule .body .cell {
-  position: relative;
-  height: 6em;
-  border-right: 1px solid lightgray;
-  overflow: hidden;
-  cursor: pointer;
-  background: white;
-  transition: 0.25s ease-out;
-  }
-  .CalendarSchedule .body .cell:hover {
-  background: whitesmoke;
-  transition: 0.5s ease-out;
-  }
-  .CalendarSchedule .body .selected {
-  border-left: 10px solid transparent;
-  border-image: linear-gradient(45deg, #1affa0 0%,#cff153 40%);
-  border-image-slice: 1;
-  }
-  .CalendarSchedule .body .row {
-  border-bottom: 1px solid lightgray;
-  }
-  .CalendarSchedule .body .row:last-child {
-  border-bottom: none;
-  }
-  .CalendarSchedule .body .cell:last-child {
-  border-right: none;
-  }
-  .CalendarSchedule .body .cell .number {
-  position: absolute;
-  font-size: 82.5%;
-  line-height: 1;
-  top: .75em;
-  right: .75em;
-  font-weight: 700;
-  }
-  .CalendarSchedule .body .cell:hover .number, .CalendarSchedule .body .selected .number   {
-  visibility:hidden;
-  }
-  .CalendarSchedule .body .disabled {
-  color: lightgray;
-  pointer-events: none;
-  }
-  .CalendarSchedule .body .cell .bg {
-  font-weight: 700;
-  line-height: 1;
-  color: #1affa0;
-  opacity: 0;
-  font-size: 5em;
-  position: absolute;
-  top: -.2em;
-  right: -.05em;
-  transition: .25s ease-out;
-  letter-spacing: -.07em;
-  }
-  .CalendarSchedule .body .cell:hover .bg, .CalendarSchedule .body .selected .bg  {
-  opacity: 0.2;
-  transition: .5s ease-in;
-  }
-  .CalendarSchedule .body .column {
-  flex-grow: 0;
-  flex-basis: calc(100%/7);
-  width: calc(100%/7);
-  }
+}
+
+.CalendarSchedule__wrapper {
+  font-size: .85em;
+  height: 90vh;
+}
+
+button .Btn__add:hover ~ .TableData__Arrival {
+  background-color: lightgray;
+}
+
+/* .CalendarSchedule .header {
+text-transform: uppercase;
+font-weight: 700;
+font-size: 115%;
+padding: 1.5em 0;
+border-bottom: 1px solid lightgray;
+}
+.CalendarSchedule .header .icon {
+cursor: pointer;
+transition: .15s ease-out;
+}
+.CalendarSchedule .header .icon:hover {
+transform: scale(1.75);
+transition: .25s ease-out;
+color: dodgerblue;
+}
+.CalendarSchedule .header .icon:first-of-type {
+margin-left: 1em;
+}
+.CalendarSchedule .header .icon:last-of-type {
+margin-right: 1em;
+}
+.CalendarSchedule .days {
+text-transform: uppercase;
+font-weight: 400;
+color: gray;
+font-size: 70%;
+padding: .75em 0;
+border-bottom: 1px solid lightgray;
+}
+.CalendarSchedule .body .cell {
+position: relative;
+height: 6em;
+border-right: 1px solid lightgray;
+overflow: hidden;
+cursor: pointer;
+background: white;
+transition: 0.25s ease-out;
+}
+.CalendarSchedule .body .cell:hover {
+background: whitesmoke;
+transition: 0.5s ease-out;
+}
+.CalendarSchedule .body .selected {
+border-left: 10px solid transparent;
+border-image: linear-gradient(45deg, #1affa0 0%,#cff153 40%);
+border-image-slice: 1;
+}
+.CalendarSchedule .body .row {
+border-bottom: 1px solid lightgray;
+}
+.CalendarSchedule .body .row:last-child {
+border-bottom: none;
+}
+.CalendarSchedule .body .cell:last-child {
+border-right: none;
+}
+.CalendarSchedule .body .cell .number {
+position: absolute;
+font-size: 82.5%;
+line-height: 1;
+top: .75em;
+right: .75em;
+font-weight: 700;
+}
+.CalendarSchedule .body .cell:hover .number, .CalendarSchedule .body .selected .number   {
+visibility:hidden;
+}
+.CalendarSchedule .body .disabled {
+color: lightgray;
+pointer-events: none;
+}
+.CalendarSchedule .body .cell .bg {
+font-weight: 700;
+line-height: 1;
+color: #1affa0;
+opacity: 0;
+font-size: 5em;
+position: absolute;
+top: -.2em;
+right: -.05em;
+transition: .25s ease-out;
+letter-spacing: -.07em;
+}
+.CalendarSchedule .body .cell:hover .bg, .CalendarSchedule .body .selected .bg  {
+opacity: 0.2;
+transition: .5s ease-in;
+}
+.CalendarSchedule .body .column {
+flex-grow: 0;
+flex-basis: calc(100%/7);
+width: calc(100%/7);
+} */
